oggmux: fix clipped duration determination for non 0 based segments

https://bugzilla.gnome.org/show_bug.cgi?id=740422